--- a/src/Raven.Server/settings.default.json
+++ b/src/Raven.Server/settings.default.json
@@ -1,5 +1,5 @@
 ﻿{
     "ServerUrl": "http://127.0.0.1:8080",
-    "Setup.Mode": "None",
+    "Setup.Mode": "Initial",
     "License.Eula.Accepted": true
 }
